# rust-wasm-webpack5-min

./: Cargo.toml  README.md  package-lock.json  package.json  webpack.config.js
src/: lib.rs
www/: index.html  style.css
